<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="darkTheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="messageAddress">https://practicum.yandex.ru/profile/android-developer-plus</string>
    <string name="supportSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myAddress">jarman@bk.ru</string>
    <string name="webSite">https://yandex.ru/legal/practicum_offer/</string>
    <string name="searchNothing">Ничего не нашлось</string>
    <string name="searchError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear">Очистить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="textHistory">Вы искали</string>
    <string name="trackInfo">%s • %s</string>
    <string name="time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zeroTime">00:00</string>
    <string name="nothingTracks">Ваша медиатека пуста</string>
    <string name="nothingPlaylists">Вы не создали \nни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="mediaTabTracks">Избранные треки</string>
    <string name="mediaTabPlaylist">Плейлисты</string>
    <string name="playlistForm">Новый плейлист</string>
    <string name="playlistFormName">Название*</string>
    <string name="playlistFormDescription">Описание</string>
    <string name="create">Создать</string>
    <string name="dialogTitle">Завершить создание плейлиста?</string>
    <string name="dialogMessage">Все несохраненные данные будут потеряны</string>
    <string name="dialogCancel">Отмена</string>
    <string name="dialogFinish">Завершить</string>
    <string name="playlist_message">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="not_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="delete">Хотите удалить трек?</string>
    <string name="nonTracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete_message">Хотите удалить плейлист «%1$s»?</string>
    <string name="zeroSharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="noNotification">Разрешите уведомления для работы в фоне</string>

    <string-array name="mediaTabs">
        <item>Избранные треки</item>
        <item>Плейлисты</item>
    </string-array>
</resources>