<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/titleSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrowback"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/titleSettingsStyle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/darkTheme"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrowforward"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/agreement"
        android:textColor="@color/black"
        android:textSize="16sp" />
    </LinearLayout>
