<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media"
    style="@style/activityLL"
    tools:context=".media.ui.fragments.MediaFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/titleMedia"
        app:title="@string/playlistForm"
        style="@style/titleToolbar"
        app:navigationIcon="@drawable/arrowback"/>

    <ImageButton
        android:id="@+id/addPhoto"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/addphoto"
        android:background="@drawable/background_new_photo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/inputName"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:background="@drawable/background_edittext_playlist"
        android:hint="@string/playlistFormName"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorPrimary"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@drawable/background_edittext_playlist"
        android:hint="@string/playlistFormDescription"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="?attr/colorPrimary"
        android:textColorHint="?attr/colorPrimary"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:text="@string/create"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_medium"
        android:textAllCaps="false"
        android:background="@drawable/background_newplaylist_button"
        app:backgroundTint="@color/color_button_selector"/>

</LinearLayout>