<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    style="@style/activityLL"
    tools:context=".search.ui.fragments.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/titleSearch"
        app:title="@string/search"
        style="@style/titleToolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/lupa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/lupa"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="14dp"
            android:paddingEnd="4dp" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/clear"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="14dp"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_marginTop="124dp"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textHistory"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/textHistory"
        android:textSize="19sp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimary"
        android:background="?attr/colorOnPrimary"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/erroreImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/nothing"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/erroreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text=""
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimary"
        android:background="?attr/colorOnPrimary"
        android:visibility="gone"/>

    <Button
        android:id="@+id/update"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:text="@string/update"
        android:layout_gravity="center"
        android:padding="0dp"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorOnPrimary"
        android:background="@drawable/background_update_button"
        android:textSize="14sp"
        android:fontFamily="@font/ys_display_medium"
        app:cornerRadius="16dp"
        android:textAllCaps="false"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <Button
        android:id="@+id/clearHistory"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:text="@string/clearHistory"
        android:layout_gravity="center"
        android:padding="0dp"
        android:layout_marginVertical="24dp"
        android:textColor="?attr/colorOnPrimary"
        android:background="@drawable/background_update_button"
        android:textSize="14sp"
        android:fontFamily="@font/ys_display_medium"
        app:cornerRadius="16dp"
        android:textAllCaps="false"
        android:visibility="gone"/>

</LinearLayout>