<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:orientation="vertical"
        tools:context=".player.ui.fragments.PlayerFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/titlePlayer"
            style="@style/titleToolbar"
            app:navigationIcon="@drawable/arrowback"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/titlePlayer" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@id/cover"
            app:layout_constraintTop_toBottomOf="@id/cover"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@id/cover"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"/>

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/background_round_button"
            android:src="@drawable/addtoplaylist"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <com.practicum.playlistmaker.player.ui.PlaybackButtonView
            android:id="@+id/playButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/background_big_round_button"
            app:playIcon="@drawable/play"
            app:pauseIcon="@drawable/pause"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />
        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/background_round_button"
            android:src="@drawable/likeno"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <TextView
            android:id="@+id/playTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/zeroTime"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftTextBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightTextBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/time"
                app:layout_constraintTag="time"
                style="@style/playerLeftText"
                android:layout_marginTop="30dp"
                android:text="@string/time"
                app:layout_constraintTop_toBottomOf="@id/playTime"
                app:layout_constraintStart_toEndOf="@id/leftTextBorder"/>


            <TextView
                android:id="@+id/timeNumber"
                style="@style/playerRightText"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/playTime"
                app:layout_constraintEnd_toStartOf="@id/rightTextBorder"
                app:layout_constraintStart_toEndOf="@id/textsBarrier"/>

            <TextView
                android:id="@+id/album"
                app:layout_constraintTag="album"
                style="@style/playerLeftText"
                android:text="@string/album"
                app:layout_constraintTop_toBottomOf="@id/time"
                app:layout_constraintStart_toEndOf="@id/leftTextBorder"/>

            <TextView
                android:id="@+id/albumName"
                style="@style/playerRightText"
                app:layout_constraintTop_toBottomOf="@id/time"
                app:layout_constraintEnd_toStartOf="@id/rightTextBorder"
                app:layout_constraintStart_toEndOf="@id/textsBarrier"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="album, albumName" />

            <TextView
                android:id="@+id/year"
                app:layout_constraintTag="year"
                style="@style/playerLeftText"
                android:layout_gravity="center_vertical"
                android:text="@string/year"
                app:layout_constraintStart_toEndOf="@id/leftTextBorder"
                app:layout_constraintTop_toBottomOf="@id/album"/>

            <TextView
                android:id="@+id/yearNumber"
                style="@style/playerRightText"
                app:layout_constraintEnd_toStartOf="@id/rightTextBorder"
                app:layout_constraintStart_toEndOf="@id/textsBarrier"
                app:layout_constraintTop_toBottomOf="@id/album"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/yearGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="year, yearNumber"/>

            <TextView
                android:id="@+id/genre"
                app:layout_constraintTag="genre"
                style="@style/playerLeftText"
                android:text="@string/genre"
                app:layout_constraintStart_toEndOf="@id/leftTextBorder"
                app:layout_constraintTop_toBottomOf="@id/year"/>

            <TextView
                android:id="@+id/genreName"
                style="@style/playerRightText"
                app:layout_constraintEnd_toStartOf="@id/rightTextBorder"
                app:layout_constraintStart_toEndOf="@id/textsBarrier"
                app:layout_constraintTop_toBottomOf="@id/year"/>

            <TextView
                android:id="@+id/country"
                app:layout_constraintTag="country"
                style="@style/playerLeftText"
                android:text="@string/country"
                app:layout_constraintStart_toEndOf="@id/leftTextBorder"
                app:layout_constraintTop_toBottomOf="@id/genre"/>

            <TextView
                android:id="@+id/countryName"
                style="@style/playerRightText"
                app:layout_constraintStart_toEndOf="@id/textsBarrier"
                app:layout_constraintEnd_toStartOf="@id/rightTextBorder"
                app:layout_constraintTop_toBottomOf="@id/genre"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="time, album, year, genre, country"
            app:barrierDirection="end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

        <View android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottomsheet"
        style="@style/activityLL"
        app:behavior_hideable="true"
        app:behavior_peekHeight="340dp"
        android:background="@drawable/background_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounder" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/add_to_playlist"
            android:layout_marginTop="12dp"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimary"
            android:background="?attr/colorOnPrimary"/>

        <Button
            android:id="@+id/newPlaylist"
            android:layout_width="135dp"
            android:layout_height="36dp"
            android:text="@string/newPlaylist"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:textColor="?attr/colorOnPrimary"
            android:background="@drawable/background_update_button"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:textAllCaps="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
