<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/titlePlayer"
            style="@style/titleToolbar"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/titlePlayer" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackName" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/round_button_background"
            android:src="@drawable/addtoplaylist"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/big_round_button_background"
            android:src="@drawable/play"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/round_button_background"
            android:src="@drawable/likeno"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <TextView
            android:id="@+id/playTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="00:00"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/playTime">

            <TextView
                android:id="@+id/time"
                style="@style/playerText"
                android:layout_gravity="center_vertical"
                android:text="@string/time" />

            <TextView
                android:id="@+id/timeNumber"
                style="@style/playerText"
                android:layout_gravity="center_vertical|end" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/frame1">

            <TextView
                android:id="@+id/album"
                style="@style/playerText"
                android:layout_gravity="center_vertical"
                android:text="@string/album" />

            <TextView
                android:id="@+id/albumName"
                style="@style/playerText"
                android:layout_gravity="center_vertical|end" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame3"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/frame2">

            <TextView
                android:id="@+id/year"
                style="@style/playerText"
                android:layout_gravity="center_vertical"
                android:text="@string/year" />

            <TextView
                android:id="@+id/yearNumber"
                style="@style/playerText"
                android:layout_gravity="center_vertical|end" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/frame3">

            <TextView
                android:id="@+id/genre"
                style="@style/playerText"
                android:layout_gravity="center_vertical"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/genreName"
                style="@style/playerText"
                android:layout_gravity="center_vertical|end" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame5"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/frame4">

            <TextView
                android:id="@+id/country"
                style="@style/playerText"
                android:layout_gravity="center_vertical"
                android:text="@string/country" />

            <TextView
                android:id="@+id/countryName"
                style="@style/playerText"
                android:layout_gravity="center_vertical|end" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>